[package]
name = "qrrs"
version = "0.1.8"
authors = ["Lenivaya <xocada@gmail.com>"]
description = "CLI QR code generator and reader"
homepage = "https://github.com/Lenivaya/qrrs"
repository = "https://github.com/Lenivaya/qrrs"
readme = "README.md"
keywords = ["cli", "qrcode", "qr", "decoder", "parser"]
categories = ["command-line-utilities", "encoding", "parsing"]
license = "MIT"
edition = "2018"

[profile.release]
# lto = true
lto = "fat"
opt-level = "z"
codegen-units = 1
panic = 'abort'
[profile.release.package."*"]
opt-level = "z"
codegen-units = 1

[dependencies]
qrcode = "0.12.0"
rqrr = "0.4.0"
image = "0.23"
clap = { version = "4.1", features = ["derive", "cargo", "unicode", "wrap_help"] }

[dev-dependencies]
rand = "0.8.4"
predicates = "2"
assert_cmd = "2"

[build-dependencies]
clap = "4.1"
clap_complete = "4.0"
clap_mangen = "0.2"
roff = "0.2.1"
