[package]
name = "qrrs"
version = "0.1.9"
authors = ["Lenivaya <xocada@gmail.com>"]
description = "CLI QR code generator and reader"
homepage = "https://github.com/Lenivaya/qrrs"
repository = "https://github.com/Lenivaya/qrrs"
readme = "README.md"
keywords = ["cli", "qrcode", "qr", "decoder", "parser"]
categories = ["command-line-utilities", "encoding", "parsing"]
license = "MIT"
edition = "2021"

[profile.release]
# lto = true
debug = false
lto = "fat"
opt-level = "z"
codegen-units = 1
panic = 'unwind'
[profile.release.package."*"]
opt-level = "z"
codegen-units = 1

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo", "unicode", "wrap_help"] }
qrencode = "0.14.0"
rqrr = "0.6.0"
image = "0.24"

[dev-dependencies]
rand = "0.8.5"
predicates = "3"
assert_cmd = "2"

[build-dependencies]
clap = { version = "4.4", features = ["derive", "cargo", "unicode", "wrap_help"] }
clap_complete = "4.4"
clap_mangen = "0.2"
roff = "0.2.1"
